init/broker-deployment.yaml
# cp to /ckad/daring-moccasin/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: broker-deployment
  name: broker-deployment
  namespace: quetzal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker-deployment
  template:
    metadata:
      labels:
        app: broker-deployment
    spec:
      containers:
      - image: nginx:1.16
        name: nginx
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
