init/honeybee-deployment.yaml
# cp to /ckad/prompt-escargot/honeybee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: honeybee-deployment
  name: honeybee-deployment
  namespace: gorilla
spec:
  replicas: 1
  selector:
    matchLabels:
      app: honeybee-deployment
  template:
    metadata:
      labels:
        app: honeybee-deployment
    spec:
      containers:
      - image: nginx:1.16
        name: nginx
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
