init/nosql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nosql
  name: nosql
  namespace: haddock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nosql
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nosql
    spec:
      containers:
      - image: nginx:1.16
        name: nginx
        resources: 
          requests:
            memory: "40Mi"
            cpu: "5000M"
