init/ingress.yaml
# cp to /ckad/CKAD202206/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-ckad
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-dm
  name: nginx-dm
  namespace: ingress-ckad
spec:
  replicas: 2
  selector:
    matchLabels:
      name: nginx-ing
  template:
    metadata:
      labels:
        name: nginx-ing
    spec:
      volumes:
        - name: config
          configMap:
            name: nginx-conf
      containers:
      - image: nginx:1.16
        name: nginx
        ports:
        - containerPort: 81
          name: http
          protocol: TCP
        volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ing-svc
  namespace: ingress-ckad
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    name: nginx-dm
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-test
  namespace: ingress-ckad
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - http:
       paths:
       - pathType: Prefix
         path: "/hello"
         backend:
           service:
             name: nginx-ing
             port:
               number: 80
